tests/sksl/errors/GrBadIn.cpp
### Compilation failed:

error: 3: 'in' variable must be either 'uniform' or 'layout(key)', or there must be a custom @setData function
1 error
